[gd_scene load_steps=3 format=3 uid="uid://w8iw35kh450x"]

[ext_resource type="Script" path="res://Scenes/CaseClosedMenu/case_closed_menu.gd" id="1_btqu1"]
[ext_resource type="Theme" uid="uid://dxxcqron0p625" path="res://Resources/UITheme/UITheme.tres" id="1_rhm80"]

[node name="CaseClosedMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btqu1")

[node name="DarkTransparentColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.521569)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -60.0
offset_right = 90.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VerticalBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_rhm80")
theme_override_constants/separation = 12

[node name="CaseClosedHeadline" type="Label" parent="MarginContainer/VerticalBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Case closed. Good job, Detective Snickers!"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/VerticalBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="QuitButton" type="Button" parent="MarginContainer/VerticalBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VerticalBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VerticalBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
